--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-google-charts": "^5.2.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "react-simple-typewriter": "^5.0.1",
     "react-spinners": "^0.15.0"
